tests/compile_failure/src/Utility/Integer.float.fail.cpp
#include <Phi/Utility/Integer.hpp>

int main()
{
    phi::Integer<float> i{7};
}
